--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,22 @@
 {
-  "name": "TMWxD",
+  "name": "WebMail",
   "keywords": [
-    "tmw",
-    "e-commerce",
-    "plataforma",
+    "email",
+    "smtp",
+    "pop3",
     "php"
   ],
-  "description": "Plataforma da TMW E-commerce Solutions",
-  "homepage": "http://tmw.com.br",
+  "description": "Plataforma de WebMail",
   "authors": [
     {
       "name": "Daniel Bispo",
       "email": "szagot@gmail.com",
-      "homepage": "http://tmw.com.br/quem-somos/",
+      "homepage": "https://about.me/Daniel.Bispo",
       "role": "Lead Developer"
     },
     {
       "name": "Kamile Pimenta",
-      "email": "kamile@tmw.com.br",
-      "homepage": "http://tmw.com.br/quem-somos/",
+      "email": "kamile.pimenta@outlook.com",
       "role": "Contributors"
     }
   ],
